# Listlike-Data-Structures

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  list.c  list.h  list.rs  main.c  node.c  node.h
include/: defs.h
src/: defs.h  exceptions.h  lib.rs  list.c  list.cpp  list.h  list.rs  log.c  main.c  main.cpp  main.rs  node.c  node.cpp  node.h  node.rs
src/doubly-linked-list/: list.c  list.h  node.c  node.h
src/doubly-linked-list/include/: list.h  node.h
src/vec/: vec.c  vec.h
src/vec/include/: vec.h
